--- a/mems_server/templates/index.html
+++ b/mems_server/templates/index.html
@@ -44,10 +44,10 @@
 
     <form>
         <p>latest point</p>
-        <input id="text1" type="number" value="1" min="1" class="class2"></input>
+        <input id="text1" type="number" value="1" class="class2"></input>
         </br>
         <p>oldest point</p>
-        <input id="text2" type="number" value="10000" min="1" class="class2"></input>
+        <input id="text2" type="number" value="10000" class="class2"></input>
         <button id="button1">Set</button>
     </form>
       
