--- a/mems_server/templates/index.html
+++ b/mems_server/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>MEMS runnimg test</title>
-    <script src="static/js/script2.js"></script>
+    <script src="static/js/script.js"></script>
     <link rel="stylesheet" href="static/css/style.css"></link>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
