--- a/mems_server/templates/index.html
+++ b/mems_server/templates/index.html
@@ -26,16 +26,8 @@
 
     <div>
         <p>Select a MEMS board number</p>
-        <select id=selector onchange="drawGraph(this)">
-            <option value="2112-01">2112-01</option>
-            <option value="2203-04">2203-04</option>
-            <option value="2209-02">2209-02</option>
+        <select id=selector onchange="selectBoard(this)">
             <option value="2209-05" selected>2209-05</option>
-            <option value="2209-06">2209-06</option>
-            <option value="2209-07">2209-07</option>
-            <option value="2209-08">2209-08</option>
-            <option value="2209-09">2209-09</option>
-            <option value="2209-11">2209-11</option>
         </select>
     </div>
 
