--- a/mems_server/templates/index.html
+++ b/mems_server/templates/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
     //initialize components
     $(document).ready(function() {
-        var target = document.getElementById('selector');
+        const target = document.getElementById('selector');
         drawGraph(target);
     });
     </script>
